// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoteForm should match the snapshot when 200 < status < 300 1`] = `
<div
  className="NoteForm"
>
  <input
    className="NoteForm--title"
    name="title"
    onChange={[Function]}
    placeholder="Title"
    value="Workout"
  />
  <IncompleteItem
    description="20 situps"
    focusedListItemID={null}
    handleChange={[Function]}
    handleComplete={[Function]}
    handleItemDelete={[Function]}
    id="lpo"
    key="lpo"
  />
  <input
    className="NoteForm--new-input"
    name=""
    onChange={[Function]}
    placeholder="List item"
    value=""
  />
  <CompleteItem
    description="15 pushups"
    handleComplete={[Function]}
    handleItemDelete={[Function]}
    id="lqw"
    key="lqw"
  />
  <button
    className="NoteForm--button"
    disabled={false}
    onClick={[Function]}
  >
    Save
  </button>
  <button
    className="NoteForm--button"
    onClick={[Function]}
  >
    Delete
  </button>
  <Redirect
    push={false}
    to="/"
  />
</div>
`;

exports[`NoteForm should match the snapshot when the path is /new-note 1`] = `
<div
  className="NoteForm"
>
  <input
    className="NoteForm--title"
    name="title"
    onChange={[Function]}
    placeholder="Title"
    value=""
  />
  <input
    className="NoteForm--new-input"
    name=""
    onChange={[Function]}
    placeholder="List item"
    value=""
  />
  <button
    className="NoteForm--button"
    disabled={true}
    onClick={[Function]}
  >
    Save
  </button>
  <Link
    replace={false}
    to="/"
  >
    <button
      className="NoteForm--button"
    >
      Discard
    </button>
  </Link>
</div>
`;

exports[`NoteForm should match the snapshot when the path is /notes/:id 1`] = `
<div
  className="NoteForm"
>
  <input
    className="NoteForm--title"
    name="title"
    onChange={[Function]}
    placeholder="Title"
    value="Workout"
  />
  <IncompleteItem
    description="20 situps"
    focusedListItemID={null}
    handleChange={[Function]}
    handleComplete={[Function]}
    handleItemDelete={[Function]}
    id="lpo"
    key="lpo"
  />
  <input
    className="NoteForm--new-input"
    name=""
    onChange={[Function]}
    placeholder="List item"
    value=""
  />
  <CompleteItem
    description="15 pushups"
    handleComplete={[Function]}
    handleItemDelete={[Function]}
    id="lqw"
    key="lqw"
  />
  <button
    className="NoteForm--button"
    disabled={false}
    onClick={[Function]}
  >
    Save
  </button>
  <button
    className="NoteForm--button"
    onClick={[Function]}
  >
    Delete
  </button>
</div>
`;
